# legal-did-solana

./: .gitignore  Anchor.toml  Cargo.toml  README copy.md  README.md  collection_metadata.json  package-lock.json  package.json  tsconfig.base.json
programs/rnsdid-core/: Cargo.toml
programs/rnsdid-core/src/: error.rs  lib.rs  state.rs  token_metadata.rs  utils.rs
programs/rnsdid-core/src/instructions/: airdrop.rs  authorize_mint.rs  burn.rs  initialize.rs  initialize_collection.rs  mod.rs  verify.rs
solidity/: LegalDIDV2.sol
tests/: 1_initialize.test.ts  1_initialize_collection.test.ts  2_collection_config.test.ts  3_authorize_mint.test.ts  4_airdrop.test.ts  5._fetch_data_info.test.ts  6_burn.test.ts
tests/utils/: constants.ts  utils.ts
utils/shared-utils/: Cargo.toml
utils/shared-utils/src/: bubblegum.rs  lib.rs  token_metadata.rs
