# cargo-features = ["workspace-inheritance"]

[package]
name = "rnsdid-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rnsdid_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0" }
mpl-token-metadata = { version = "1.11.0", features = ["no-entrypoint"] }
mpl-bubblegum = { version = "0.9.2", features = ["no-entrypoint", "cpi"] }
spl-account-compression = { version = "0.1.2", features = ["no-entrypoint", "cpi"] }
solana-program = "< 1.15"
proc-macro-crate = "=1.2.1"
mpl-token-auth-rules = "=1.2.0"
shared-utils = { path = "../../utils/shared-utils" }
sha2 = "0.9"